{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 121,
  "lineage": "d259d296-b14c-4d43-8ca0-9f1d30e4eb06",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff1c68c6e837b183",
            "arn": "arn:aws:ec2:eu-west-2:731825486392:instance/i-0a08e877ee6952b86",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a08e877ee6952b86",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lookup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b34f1a30f036d7ab",
            "private_dns": "ip-10-0-1-26.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-18-130-201-109.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.201.109",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037ebe497a3820c37",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eb803378471f5b56"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067ec86e97618cfee",
            "tags": {
              "Name": "inst-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "inst-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb803378471f5b56"
            ]
          },
          "dependencies": [
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff1c68c6e837b183",
            "arn": "arn:aws:ec2:eu-west-2:731825486392:instance/i-0234c717fe1264eb9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0234c717fe1264eb9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lookup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00905f76d05ee4c56",
            "private_dns": "ip-10-0-2-121.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.121",
            "public_dns": "ec2-18-132-48-123.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.132.48.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06d3a8a805ed27600",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eb803378471f5b56"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07f11d24c18fd701d",
            "tags": {
              "Name": "inst-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "inst-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb803378471f5b56"
            ]
          },
          "dependencies": [
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "inst-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ff1c68c6e837b183",
            "arn": "arn:aws:ec2:eu-west-2:731825486392:instance/i-0c77826ff327edb1a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c77826ff327edb1a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "lookup",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09dbf47ccd8c8a599",
            "private_dns": "ip-10-0-1-89.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.89",
            "public_dns": "ec2-13-43-218-161.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.43.218.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098ecd30507e4a766",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eb803378471f5b56"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-067ec86e97618cfee",
            "tags": {
              "Name": "inst-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "inst-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eb803378471f5b56"
            ]
          },
          "dependencies": [
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "inst_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:internet-gateway/igw-07b12a937194edcc7",
            "id": "igw-07b12a937194edcc7",
            "owner_id": "731825486392",
            "tags": {
              "Name": "inst_internet_gateway"
            },
            "tags_all": {
              "Name": "inst_internet_gateway"
            },
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "dependencies": [
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "inst-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:loadbalancer/app/inst-load-balancer/59374ee46a6b7cdc",
            "arn_suffix": "app/inst-load-balancer/59374ee46a6b7cdc",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "inst-load-balancer-1472771923.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:loadbalancer/app/inst-load-balancer/59374ee46a6b7cdc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "inst-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a36a289a812853fb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-067ec86e97618cfee"
              },
              {
                "subnet_id": "subnet-07f11d24c18fd701d"
              }
            ],
            "subnets": [
              "subnet-067ec86e97618cfee",
              "subnet-07f11d24c18fd701d"
            ],
            "vpc_id": "vpc-000f5378c60d0ce8b",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_instance.inst-1",
            "aws_instance.inst-2",
            "aws_instance.inst-3",
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "inst-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:listener/app/inst-load-balancer/59374ee46a6b7cdc/fd7a26fecda80d5c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:listener/app/inst-load-balancer/59374ee46a6b7cdc/fd7a26fecda80d5c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:loadbalancer/app/inst-load-balancer/59374ee46a6b7cdc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.inst-1",
            "aws_instance.inst-2",
            "aws_instance.inst-3",
            "aws_lb.inst-load-balancer",
            "aws_lb_target_group.inst-target-group",
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "inst-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:listener-rule/app/inst-load-balancer/59374ee46a6b7cdc/fd7a26fecda80d5c/0ea15323dc6193ba",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:listener-rule/app/inst-load-balancer/59374ee46a6b7cdc/fd7a26fecda80d5c/0ea15323dc6193ba",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:listener/app/inst-load-balancer/59374ee46a6b7cdc/fd7a26fecda80d5c",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.inst-1",
            "aws_instance.inst-2",
            "aws_instance.inst-3",
            "aws_lb.inst-load-balancer",
            "aws_lb_listener.inst-listener",
            "aws_lb_target_group.inst-target-group",
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "inst-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
            "arn_suffix": "targetgroup/inst-target-group/7cc02ae9ef056c39",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inst-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "dependencies": [
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "inst-target-group-attachement1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39-20240119164556090500000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
            "target_id": "i-0a08e877ee6952b86"
          },
          "dependencies": [
            "aws_instance.inst-1",
            "aws_lb_target_group.inst-target-group",
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "inst-target-group-attachement2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39-20240119164556324400000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
            "target_id": "i-0234c717fe1264eb9"
          },
          "dependencies": [
            "aws_instance.inst-2",
            "aws_lb_target_group.inst-target-group",
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "inst-target-group-attachement3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39-20240119164556202800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:731825486392:targetgroup/inst-target-group/7cc02ae9ef056c39",
            "target_id": "i-0c77826ff327edb1a"
          },
          "dependencies": [
            "aws_instance.inst-3",
            "aws_lb_target_group.inst-target-group",
            "aws_security_group.inst-load_balancer_sg",
            "aws_security_group.inst-security-grp-rule",
            "aws_subnet.inst-public-subnet1",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "inst-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:network-acl/acl-0a2235494045a35e6",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0a2235494045a35e6",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "731825486392",
            "subnet_ids": [
              "subnet-067ec86e97618cfee",
              "subnet-07f11d24c18fd701d"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.inst-public-subnet1",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "inst-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:route-table/rtb-0c7bda19c7d898035",
            "id": "rtb-0c7bda19c7d898035",
            "owner_id": "731825486392",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07b12a937194edcc7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "inst-route-table-public"
            },
            "tags_all": {
              "Name": "inst-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.inst_internet_gateway",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "inst-public-subnet1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021d8d69d9a9606f7",
            "route_table_id": "rtb-0c7bda19c7d898035",
            "subnet_id": "subnet-067ec86e97618cfee"
          },
          "dependencies": [
            "aws_internet_gateway.inst_internet_gateway",
            "aws_route_table.inst-route-table-public",
            "aws_subnet.inst-public-subnet1",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "inst-public-subnet2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021c47c68217f089c",
            "route_table_id": "rtb-0c7bda19c7d898035",
            "subnet_id": "subnet-07f11d24c18fd701d"
          },
          "dependencies": [
            "aws_internet_gateway.inst_internet_gateway",
            "aws_route_table.inst-route-table-public",
            "aws_subnet.inst-public-subnet2",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inst-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:security-group/sg-0a36a289a812853fb",
            "description": "security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0a36a289a812853fb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inst-load_balancer_sg",
            "name_prefix": "",
            "owner_id": "731825486392",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "inst-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:security-group/sg-0eb803378471f5b56",
            "description": "Allow SSH, HTTP, and HTTPS inbound traffic for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb803378471f5b56",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a36a289a812853fb"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a36a289a812853fb"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "731825486392",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "inst-security-grp-rule"
            },
            "tags_all": {
              "Name": "inst-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.inst-load_balancer_sg",
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inst-public-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:subnet/subnet-067ec86e97618cfee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067ec86e97618cfee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731825486392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inst-public-subnet1"
            },
            "tags_all": {
              "Name": "inst-public-subnet1"
            },
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "dependencies": [
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "inst-public-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:subnet/subnet-07f11d24c18fd701d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f11d24c18fd701d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "731825486392",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "inst-public-subnet2"
            },
            "tags_all": {
              "Name": "inst-public-subnet2"
            },
            "vpc_id": "vpc-000f5378c60d0ce8b"
          },
          "dependencies": [
            "aws_vpc.inst_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "inst_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:731825486392:vpc/vpc-000f5378c60d0ce8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c87bc71be9af01b5",
            "default_route_table_id": "rtb-0512e37e4cb09a2b6",
            "default_security_group_id": "sg-0e8d42a0cd82a018d",
            "dhcp_options_id": "dopt-03d52fcddef1f03db",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-000f5378c60d0ce8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0512e37e4cb09a2b6",
            "owner_id": "731825486392",
            "tags": {
              "Name": "inst_vpc"
            },
            "tags_all": {
              "Name": "inst_vpc"
            }
          }
        }
      ]
    }
  ]
}